@@ -12,7 +12,6 @@ filename = t/data/BadMETA.yml
 CPAN::Meta::YAML = 0.011
 File::Spec = 0.80
 JSON::PP = 2.27200
-Encode = 2.11
 
 [Prereqs / TestRequires]
 Test::More = 0.47
